CHATS_SIT/force-app/main/default/objects/T_AUTH_ABSENCE__c.object
<CustomObject>
    
    <fields>
        <fullName>IDN_AUTH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorization ID</label>
        <referenceTo>T_AUTH__c</referenceTo>
        <relationshipLabel>Authorization Absences</relationshipLabel>
        <relationshipName>Authorization_Absences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Authorization Absences</relationshipLabel>
        <relationshipName>Authorization_Absences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual ID</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Authorization Absences</relationshipLabel>
        <relationshipName>Authorization_Absences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Authorization Absence External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Absences_From_ATS__c</fullName>
        <label>Number of Absences From ATS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Absences_From_Auth_Encmbr__c</fullName>
        <label>Number of Absences From Auth Encmbr</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Authorization Absence</label>
    <nameField>
        <displayFormat>AA-{0}</displayFormat>
        <label>Authorization Absence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorization Absences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>