CHATS_SIT/force-app/main/default/objects/T_AUTH_ABSENCE__c/fields/CvExternalId__c.field-meta.xml
<CustomField>
    <fullName>CvExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External id field used by Commvault to map the records with the source organization.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CvExternalId__c</label>
    <length>42</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>